force-app/main/default/objects/TIMBASURVEYS__PageBranchingRule__c/fields/TIMBASURVEYS__GoToPage__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__GoToPage__c</fullName>
    <label>GoToPage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>