force-app/main/default/objects/TIMBASURVEYS__PageBranchingRule__c/fields/TIMBASURVEYS__Survey__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Survey__c</fullName>
    <label>Survey</label>
    <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
    <relationshipLabel>PageBranchingRules</relationshipLabel>
    <relationshipName>PageBranchingRules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>